update build.gradle for 4.x, drop datanucleus support